# pavo

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  underlayer.html  vite.config.js
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/types/src/routes/: $types.d.ts
assets/: styles.css
docs/: architecture.md
src/: app.css  app.d.ts  app.html  app.rs  main.rs  root.css  typing.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  cache.rs  cmd.rs  config.rs  lib.rs  main.rs  plugins.rs  scheduler.rs  shuffle_thread.rs  threads.rs  tray.rs
src-tauri/src/services/: bing.rs  bingwallpaper.rs  landscape.json  mock.rs  mod.rs  pexels.rs
src/components/: bing_daily.rs  bingwallpaper.rs  home.rs  interval.rs  mod.rs  pexels_photo.rs  toolbar.rs  wallpaper.rs
src/lib/: updater.ts
src/lib/components/: BingWallpaper.svelte  Skeleton.svelte  Toolbar.svelte
src/pages/: about.svelte  bing.svelte  home.rs  layout.rs  mock.rs  mod.rs  pexels.rs  setting.rs  settings.svelte
src/pages/layer/: index.css  index.svelte  index.ts
src/pages/main/: bing.svelte  index.svelte  index.ts  settings.svelte
src/routes/: +layout.svelte  +page.svelte
