[package]
name = "pavo"
version = "0.0.0"
description = "wallpaper"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tauri = { version = "1.2", features = ["dialog", "fs-read-file", "shell-open", "system-tray"] }
reqwest = { version = "0.11", features = ["json", "socks", "stream"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
indicatif = "0.17.3"
futures-util = "0.3.25"
wallpaper = { version = "3.2.0", features = ["from_url"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
