[package]
name = "pavo"
version = "0.0.5"
description = "wallpaper"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tauri = { version = "2.1.1", features = ["image-ico", "image-png", "tray-icon"] }
reqwest = { version = "0.11", features = ["json", "socks", "stream"] }
tokio = { version = "1.25.0", features = ["full", "time"] }
toml = "0.7.1"
indicatif = "0.17.3"
futures-util = "0.3.25"
wallpaper = { version = "3.2.0", features = ["from_url"] }
chrono = { version = "0.4.23"}
rand = { version = "*"}
once_cell = "1.17.0"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
dirs = "5.0.1"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-process = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
